js/js.translator/testData/incremental/invalidation/addJsFunCall/main/jsFun.kt
fun jsFun(): String = js("\"OK\"")